api/kubernetes/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: wordpress
    meta.helm.sh/release-namespace: lawrencemcdaniel-api
  creationTimestamp: "2023-08-22T03:07:54Z"
  labels:
    app.kubernetes.io/instance: wordpress
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: wordpress
    helm.sh/chart: wordpress-15.2.61
  name: wordpress
  namespace: lawrencemcdaniel-api
  resourceVersion: "79636663"
  uid: f6492a38-d0b8-47c9-b488-aa9b7402b561
spec:
  clusterIP: 10.100.140.218
  clusterIPs:
    - 10.100.140.218
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/instance: wordpress
    app.kubernetes.io/name: wordpress
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
